tests/scripts/errors/lex/unexpected_char_at.cdo
VAR x = @ 5;
print(x);
